apps/uptime-kuma/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: server
  labels:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`uptime.d-f.dev`) || (Host(`status.d-f.dev`) && !Path(`/`))"
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
      middlewares:
        - name: crowdsec
          namespace: server
    - match: "Host(`status.d-f.dev`) && Path(`/`)"
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
      middlewares:
        - name: crowdsec
          namespace: server
        - name: status-redirect
          namespace: server
  tls:
    certResolver: letsencrypt
